tests/NormalTests/paczka1/fuzzy1/32704492.err
Error in line 4: H3Ed9uLp2 A578 1	,2
Error in line 2: VeqI S311 16,6
Error in line 9: D32iZGExfps A52 56,5
Error in line 3: H3Ed9uLp2 A578 10,5
Error in line 29: S878 A52 34,7
Error in line 31: S878 S878 25,9
Error in line 26: 4Ddk A52 52,6
